--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,10 +12,10 @@
         android:orientation="vertical">
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/parte2landscape"
-        android:orientation="vertical"
+        android:id="@+id/fragment_secundario"
         android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="match_parent"></LinearLayout>
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:orientation="vertical"/>
 
 </LinearLayout>
